--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -8,6 +8,11 @@
 
     svg {
       margin-right: 8px;
+      transform: rotate(180deg);
+      transition: all 0.5s;
+      &.rotated {
+        transform: rotate(0deg);
+      }
     }
 
     b {
