--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -1,6 +1,7 @@
 @import '../variables';
 
 .sort {
+  margin-left: 20px;
   position: relative;
   &__label {
     display: flex;
@@ -9,9 +10,9 @@
     svg {
       margin-right: 8px;
       transform: rotate(180deg);
-      transition: all 0.5s;
+
       &.rotated {
-        transform: rotate(0deg);
+        transform: rotate(0);
       }
     }
 
