--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -404,7 +404,7 @@ body {
 
   &--empty {
     margin: 0 auto;
-    width: 560px;
+    max-width: 560px;
     text-align: center;
 
     h2 {
@@ -427,7 +427,7 @@ body {
 
     img {
       display: block;
-      width: 300px;
+      width: 250px;
       margin: 45px auto 60px;
     }
 
